fix: add resume

--- a/about.html
+++ b/about.html
@@ -11,6 +11,12 @@
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>About - vigneswaran</title>
+    <style>
+        a{
+            text-decoration: none !important;
+            color: #D9D9D9 !important;
+        }
+    </style>
 </head>
 
 <body>
@@ -65,8 +71,8 @@
                             skills in Full Stack Development.
                             After completing my course, I joined the company CLUBMAN & HOSPITALITY SOFTWARE SOLUTIONS PVT. LTD. as a Full Stack Developer, where I gained 1.7 years of experience. -->
                         </p>
-                        <button class="btn1 ">VIEW RESUME</button>
-                        <button class="btn1">DOWNLOAD RESUME</button>
+                        <a class="btn1" href="/assets/VigneswaranK(Resume).pdf" target="_blank">VIEW RESUME</a>
+                        <a class="btn1" href="/assets/VigneswaranK(Resume).pdf" download="">DOWNLOAD RESUME</a>
 
                     </div>
                 </div>
