--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
                 <div class="menu-content">
                     <a href="/index.html">Home</a>
                     <a href="/contact.html">About</a>
-                    <a href="#portfolio">Portfolio</a>
+                    <a href="/portfolio.html">Portfolio</a>
                     <a href="/contact.html">Contact</a>
                 </div>
 
