--- a/portfolio.html
+++ b/portfolio.html
@@ -62,9 +62,79 @@
         }
 
         .swiper-pagination-bullet {
-    background: #D9D9D9 !important; 
-    margin: 5px !important;
-}
+            background: #D9D9D9 !important;
+            margin: 5px !important;
+        }
+
+
+
+        .popup {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            /* background-color: #D9D9D9;
+    background: rgba(255, 255, 255, 0.02);
+    backdrop-filter: blur(5px); */
+            z-index: 999;
+            justify-content: center;
+            align-items: center;
+        }
+
+
+        .popup-content {
+            width: 100% !important;
+            min-height: 100vh !important;
+            display: flex;
+            align-items: center;
+            justify-content: center !important;
+        }
+
+        .contain-popup {
+            width: 45% !important;
+            min-height: 80vh !important;
+            background-color: #D9D9D9;
+            background: rgba(0, 0, 0, 0.3);
+            backdrop-filter: blur(15px);
+            border-radius: 10px !important;
+        }
+
+        .popuimg {
+            width: 95%;
+            height: 200px !important;
+            margin: 10px !important;
+        }
+
+        h5 {
+            color: #ffff !important;
+            font-weight: 500 !important;
+            text-transform: uppercase;
+            font-size: 16px !important;
+        }
+
+        .btn12 {
+            font-size: 20px !important;
+            cursor: pointer !important;
+            color: #D9D9D9 !important;
+        }
+
+        .popup-text {
+            font-size: 12px !important;
+            text-align: justify !important;
+            color: #ffff !important;
+        }
+
+        a {
+            text-decoration: none !important;
+            color: #D9D9D9 !important;
+        }
+
+        ul li {
+            color: #D9D9D9 !important;
+            font-size: 12px !important;
+        }
     </style>
 
 </head>
@@ -103,16 +173,16 @@
 
 
 
-                    
+
                     <div class="swiper-wrapper">
                         <div class="swiper-slide  p-5">
                             <div class="con-box">
                                 <div class="img-contain">
-                                    <img src="/assets/slide1 (1).png" class="img-fluid p-2" alt="">
+                                    <img src="/assets/slide4.png" class="img-fluid p-2" alt="">
                                 </div>
                                 <div class="contain-box d-flex align-items-center justify-content-center flex-column">
                                     <h6 class="mb-2 text-uppercase">virtual Event Management</h6>
-                                    <button class="btn1">VIEW PROJECT</button>
+                                    <button class="btn1" onclick="openPopup('popup2')">VIEW PROJECT</button>
                                 </div>
                             </div>
                         </div>
@@ -124,8 +194,8 @@
                                     <img src="/assets/slide1 (3).png" class="img-fluid p-2" alt="">
                                 </div>
                                 <div class="contain-box d-flex align-items-center justify-content-center flex-column">
-                                    <h6 class="mb-2 text-uppercase">ecommerce  </h6>
-                                    <button class="btn1">VIEW PROJECT</button>
+                                    <h6 class="mb-2 text-uppercase">ecommerce </h6>
+                                    <button class="btn1"  onclick="openPopup('popup1')">VIEW PROJECT</button>
                                 </div>
                             </div>
                         </div>
@@ -138,11 +208,11 @@
                                 </div>
                                 <div class="contain-box d-flex align-items-center justify-content-center flex-column">
                                     <h6 class="mb-2">INTERIOR HOME DESIGN</h6>
-                                    <button class="btn1">VIEW PROJECT</button>
+                                    <button class="btn1"  onclick="openPopup('popup3')">VIEW PROJECT</button>
                                 </div>
                             </div>
                         </div>
-                    
+
 
                     </div>
 
@@ -166,10 +236,123 @@
     </section>
 
 
+    <div id="popup2" class="popup">
+        <div class="popup-content">
+            <div class="contain-popup">
+
+                <div class="title-top d-flex align-items-center justify-content-between px-5 py-3">
+                    <h5>virtual Event Management system</h5>
+                    <span class="btn12" onclick="closePopup('popup2')">✖</span>
+                </div>
+
+                <div class="img-popup">
+                    <img src="/assets/slide4.png" class="img-fluid popuimg" height="150px" alt="">
+                </div>
+                <div class="text-popup px-5">
+
+                    <p class="popup-text mb-2"> <strong>Description:</strong> Virtual Event Management System
+                        Our Virtual Event Management System revolutionizes college event planning. Authorized staff can
+                        create, manage, and promote events, while students receive automated email confirmations with QR
+                        code tickets. Role-based access ensures secure management, and real-time updates keep everyone
+                        informed. The system also allows uploading old events to track progress and analyze trends. It
+                        streamlines event organization, reduces administrative tasks, and enhances the overall
+                        experience for both staff and students.</p>
+                    <p class="popup-text"><strong>Technologies used:</strong>
+                    <ul>
+                        <li> <strong>Frontend:</strong> Angular + Bootstrap → Ideal for building a responsive and
+                            dynamic user interface.</li>
+                        <li><strong> Backend:</strong> Express.js + Node.js → Manages server-side operations, API
+                            requests, and handles business logic.</li>
+                        <li> <strong>Database:</strong> MongoDB → Suitable for storing event details, user information,
+                            and logs due to its flexibility and scalability.</li>
+                    </ul>
+
+
+                    </p>
+                    <div class="mt-3">
+                        <a class="btn1" href="https://avems-vigneswarans-projects.vercel.app/" target="_blank">VIEW
+                            ONLINE</a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div id="popup1" class="popup">
+        <div class="popup-content">
+            <div class="contain-popup">
+
+                <div class="title-top d-flex align-items-center justify-content-between px-5 py-3">
+                    <h5>ecommerce</h5>
+                    <span class="btn12" onclick="closePopup('popup1')">✖</span>
+                </div>
+
+                <div class="img-popup">
+                    <img src="/assets/slide1 (3).png" class="img-fluid popuimg" height="150px" alt="">
+                </div>
+                <div class="text-popup px-5">
+
+                    <p class="popup-text mb-2"> <strong>Description:</strong> Our E-commerce website offers a seamless platform for purchasing fresh vegetables, fruits, and spices. It features a secure admin panel for managing products, viewing orders, and updating statuses. Users can register, log in, browse products, add them to the cart, and place orders. The system provides automated email confirmations, ensuring a smooth and efficient shopping experience.</p>
+                    <p class="popup-text"><strong>Technologies used:</strong>
+                    <ul>
+                        <li> <strong>Frontend:</strong> Angular + Bootstrap → Ideal for building a responsive and
+                            dynamic user interface.</li>
+                        <li><strong> Backend:</strong> Express.js + Node.js → Manages server-side operations, API
+                            requests, and handles business logic.</li>
+                        <li> <strong>Database:</strong> MongoDB → Suitable for storing event details, user information,
+                            and logs due to its flexibility and scalability.</li>
+                    </ul>
+                    </p>
+                    <div class="mt-3">
+                        <a class="btn1" href="https://ecommerce-organic-food.vercel.app/" target="_blank">VIEW
+                            ONLINE</a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
 
+    <div id="popup3" class="popup">
+        <div class="popup-content">
+            <div class="contain-popup">
+
+                <div class="title-top d-flex align-items-center justify-content-between px-5 py-3">
+                    <h5>INTERIOR HOME DESIGN</h5>
+                    <span class="btn12" onclick="closePopup('popup3')">✖</span>
+                </div>
+
+                <div class="img-popup">
+                    <img src="/assets/slide1 (2).png" class="img-fluid popuimg" height="150px" alt="">
+                </div>
+                <div class="text-popup px-5">
+
+                    <p class="popup-text mb-2"> <strong>Description:</strong> I developed a static website for Interior Home Design using HTML, CSS, JavaScript, and Bootstrap. The website showcases a variety of modern home decor ideas, design inspirations, and renovation services. It features a responsive layout, ensuring seamless compatibility across devices, including desktops, tablets, and mobiles. The site includes interactive image galleries, service descriptions, and a contact section. CSS animations and transitions enhance the visual appeal, while JavaScript enables smooth navigation and interactive elements. The Bootstrap framework provides a sleek and professional design with pre-styled components, making the website visually attractive and easy to use. This project demonstrates my front-end development skills and ability to create aesthetic, user-friendly static websites with clean, responsive design</p>
+                    <!-- <p class="popup-text"><strong>Technologies used:</strong>
+                    <ul>
+                        <li> <strong>Frontend:</strong> Angular + Bootstrap → Ideal for building a responsive and
+                            dynamic user interface.</li>
+                        <li><strong> Backend:</strong> Express.js + Node.js → Manages server-side operations, API
+                            requests, and handles business logic.</li>
+                        <li> <strong>Database:</strong> MongoDB → Suitable for storing event details, user information,
+                            and logs due to its flexibility and scalability.</li>
+                    </ul>
+                    </p> -->
+                    <div class="mt-3">
+                        <a class="btn1" href="https://interior-design-delta-five.vercel.app/" target="_blank">VIEW
+                            ONLINE</a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
@@ -215,4 +398,15 @@
             const menu = document.getElementById("menu");
             menu.classList.toggle("active");
         }
+
+
+        function openPopup(id) {
+            document.getElementById(id).style.display = "block";
+        }
+
+        // Function to close the popup
+        function closePopup(id) {
+            document.getElementById(id).style.display = "none";
+        }
+
     </script>
