--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <p class="typewriter mb-1">HELLO! I'M</p>
           <h1 class="mb-2">VIGNESWARAN K</h1>
           <h6 class="mb-3">FULL STACK DEVELOPER</h6>
-          <button class="btn1">MORE ABOUT ME</button>
+          <a class="btn1" href="/about.html">MORE ABOUT ME</a>
         </div>
       </div>
     </div>
