fix:about apage

--- a/about.html
+++ b/about.html
@@ -47,12 +47,15 @@
             </nav>
             <div class="container-fluid">
                 <div class="row about-page">
-                    <div class="col-md-4 p-5">
-                        <img src="/assets/3.jpg" class="img-fluid about-img" srcset="">
+                    <div class="col-md-4  p-xs-2  p-md-5 ">
+                        <div class="about-img">
+                            <img src="/assets/3.jpg" class="img-fluid " srcset="">
+
+                        </div>
                     </div>
-                    <div class="col-md-8 p-5">
-                        <h3 class="mb-3">ABOUT ME</h3>
-                        <p class="mb-3">
+                    <div class="col-md-8 p-xs-3 p-md-5">
+                        <h3 class="mb-3 mb-xs-1">ABOUT ME</h3>
+                        <p class="mb-3 mb-xs-1 about-para ">
                             I'm Vigneswaran from Salem.
                             I hold a Bachelor of Engineering degree in Computer Science from Mahendra Institute of
                             Technology, Namakkal.
@@ -71,8 +74,8 @@
                             skills in Full Stack Development.
                             After completing my course, I joined the company CLUBMAN & HOSPITALITY SOFTWARE SOLUTIONS PVT. LTD. as a Full Stack Developer, where I gained 1.7 years of experience. -->
                         </p>
-                        <a class="btn1" href="/assets/VigneswaranK(Resume).pdf" target="_blank">VIEW RESUME</a>
-                        <a class="btn1" href="/assets/VigneswaranK(Resume).pdf" download="">DOWNLOAD RESUME</a>
+                        <a class="btn1 about-btn" href="/assets/VigneswaranK(Resume).pdf" target="_blank">VIEW RESUME</a>
+                        <a class="btn1 about-btn" href="/assets/VigneswaranK(Resume).pdf" download="">DOWNLOAD RESUME</a>
 
                     </div>
                 </div>
