--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
   <section>
-    <div class="box-contain">
+    <div class="box-contain" id="home">
       <div class="menu-overlay" id="menu">
         <span class="close-btn" onclick="toggleMenu()">✖</span>
 
