--- a/portfolio.html
+++ b/portfolio.html
@@ -181,7 +181,7 @@
                                     <img src="/assets/slide4.png" class="img-fluid p-2" alt="">
                                 </div>
                                 <div class="contain-box d-flex align-items-center justify-content-center flex-column">
-                                    <h6 class="mb-2 text-uppercase">virtual Event Management</h6>
+                                    <h6 class="mb-2 text-uppercase portfolio-title">virtual Event Management</h6>
                                     <button class="btn1" onclick="openPopup('popup2')">VIEW PROJECT</button>
                                 </div>
                             </div>
@@ -194,7 +194,7 @@
                                     <img src="/assets/slide1 (3).png" class="img-fluid p-2" alt="">
                                 </div>
                                 <div class="contain-box d-flex align-items-center justify-content-center flex-column">
-                                    <h6 class="mb-2 text-uppercase">ecommerce </h6>
+                                    <h6 class="mb-2 text-uppercase portfolio-title">ecommerce </h6>
                                     <button class="btn1"  onclick="openPopup('popup1')">VIEW PROJECT</button>
                                 </div>
                             </div>
@@ -207,7 +207,7 @@
                                     <img src="/assets/slide1 (2).png" class="img-fluid p-2" alt="">
                                 </div>
                                 <div class="contain-box d-flex align-items-center justify-content-center flex-column">
-                                    <h6 class="mb-2">INTERIOR HOME DESIGN</h6>
+                                    <h6 class="mb-2 portfolio-title">INTERIOR HOME DESIGN</h6>
                                     <button class="btn1"  onclick="openPopup('popup3')">VIEW PROJECT</button>
                                 </div>
                             </div>
