fix:contact page

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
             </nav>
             <div class="container-fluid">
                 <div class="row about-page">
-                    <div class="col-md-6 p-5">
+                    <div class="col-md-6 p-md-5 p-xs-2 ">
                         <h3 class="mb-3">CONTACT US</h3>
                         <div class="input-box p-2">
                             <input type="text" class="mb-3" placeholder="Name">
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 d-flex align-items-center justify-content-start">
-                        <div class="box">
+                        <div class="box contact-box">
                             <h6 class="cont-title">EMAIL ADDRESS</h6>
                             <P class="mb-3"><i class="fa-solid fa-envelope"></i> <a href="mailto:vigneswaran162@gmail.com">vigneswaran162@gmail.com</a></P>
                             <h6 class="cont-title">PHONE NO</h6>
