--- a/portfolio.html
+++ b/portfolio.html
@@ -135,6 +135,28 @@
             color: #D9D9D9 !important;
             font-size: 12px !important;
         }
+
+
+
+        @media only screen and (max-width: 550px) {
+        
+      .contain-popup {
+        width: 90% !important;
+        min-height: 50vh !important;
+        background-color: #D9D9D9;
+        background: rgba(0, 0, 0, 0.3);
+        backdrop-filter: blur(15px);
+        border-radius: 10px !important;
+    }
+
+    
+    .popup-text {
+        font-size: 8px !important;
+        text-align: justify !important;
+        color: #ffff !important;
+    }
+}
+
     </style>
 
 </head>
