--- a/portfolio.html
+++ b/portfolio.html
@@ -155,6 +155,14 @@
         text-align: justify !important;
         color: #ffff !important;
     }
+    .popuimg {
+            width: 95%;
+            height: 120px !important;
+            margin: 10px !important;
+        }
+        .popup-btn{
+            font-size: 8px !important;
+        }
 }
 
     </style>
@@ -292,7 +300,7 @@
 
                     </p>
                     <div class="mt-3">
-                        <a class="btn1" href="https://avems-vigneswarans-projects.vercel.app/" target="_blank">VIEW
+                        <a class="btn1 popup-btn" href="https://avems-vigneswarans-projects.vercel.app/" target="_blank">VIEW
                             ONLINE</a>
 
                     </div>
