--- a/portfolio.html
+++ b/portfolio.html
@@ -162,7 +162,19 @@
         }
         .popup-btn{
             font-size: 8px !important;
+            padding: 5px !important;
         }
+
+        ul li {
+        color: #D9D9D9 !important;
+        font-size:8px !important;
+    }
+    .btn1{
+        font-size: 10px !important;
+    }
+    .title-top h5{
+        font-size: 12px !important;
+    }
 }
 
     </style>
@@ -270,8 +282,8 @@
         <div class="popup-content">
             <div class="contain-popup">
 
-                <div class="title-top d-flex align-items-center justify-content-between px-5 py-3">
-                    <h5>virtual Event Management system</h5>
+                <div class="title-top d-flex align-items-center justify-content-between p-2 ">
+                    <h5 >virtual Event Management system</h5>
                     <span class="btn12" onclick="closePopup('popup2')">✖</span>
                 </div>
 
@@ -315,7 +327,7 @@
         <div class="popup-content">
             <div class="contain-popup">
 
-                <div class="title-top d-flex align-items-center justify-content-between px-5 py-3">
+                <div class="title-top d-flex align-items-center justify-content-between p-2">
                     <h5>ecommerce</h5>
                     <span class="btn12" onclick="closePopup('popup1')">✖</span>
                 </div>
@@ -353,7 +365,7 @@
         <div class="popup-content">
             <div class="contain-popup">
 
-                <div class="title-top d-flex align-items-center justify-content-between px-5 py-3">
+                <div class="title-top d-flex align-items-center justify-content-between p-2">
                     <h5>INTERIOR HOME DESIGN</h5>
                     <span class="btn12" onclick="closePopup('popup3')">✖</span>
                 </div>
