--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,11 @@
             margin: 5px !important;
         }
 
-
+         .content2{
+            font-size: 12px !important;
+            text-align: justify;
+            padding: 12px !important;
+         }
 
         .popup {
             display: none;
@@ -136,7 +140,9 @@
             font-size: 12px !important;
         }
 
-
+.popupbtn3{
+    margin-bottom: 10px !important;
+}
 
         @media only screen and (max-width: 550px) {
         
@@ -223,8 +229,13 @@
                                     <img src="/assets/slide4.png" class="img-fluid p-2" alt="">
                                 </div>
                                 <div class="contain-box d-flex align-items-center justify-content-center flex-column">
-                                    <h6 class="mb-2 text-uppercase portfolio-title">virtual Event Management</h6>
-                                    <button class="btn1" onclick="openPopup('popup2')">VIEW PROJECT</button>
+                                    <h6 class="my-1 text-uppercase portfolio-title">virtual Event Management</h6>
+                                    <p class="content2">
+                                        Virtual Event Management System
+                        Our Virtual Event Management System revolutionizes college event planning. Authorized staff can
+                        create, manage, and promote events...
+                                    </p>
+                                    <button class="btn1 popupbtn3" onclick="openPopup('popup2')">VIEW PROJECT</button>
                                 </div>
                             </div>
                         </div>
@@ -236,8 +247,11 @@
                                     <img src="/assets/slide1 (3).png" class="img-fluid p-2" alt="">
                                 </div>
                                 <div class="contain-box d-flex align-items-center justify-content-center flex-column">
-                                    <h6 class="mb-2 text-uppercase portfolio-title">ecommerce </h6>
-                                    <button class="btn1"  onclick="openPopup('popup1')">VIEW PROJECT</button>
+                                    <h6 class="my-1 text-uppercase portfolio-title">ecommerce </h6>
+                                    <p class="content2">
+                                        Our E-commerce website offers a seamless platform for purchasing fresh vegetables, fruits, and spices. It features a secure admin panel for managing products, viewing orders, and updating statuses...
+                                    </p>
+                                    <button class="btn1 popupbtn3"  onclick="openPopup('popup1')">VIEW PROJECT</button>
                                 </div>
                             </div>
                         </div>
@@ -249,8 +263,11 @@
                                     <img src="/assets/slide1 (2).png" class="img-fluid p-2" alt="">
                                 </div>
                                 <div class="contain-box d-flex align-items-center justify-content-center flex-column">
-                                    <h6 class="mb-2 portfolio-title">INTERIOR HOME DESIGN</h6>
-                                    <button class="btn1"  onclick="openPopup('popup3')">VIEW PROJECT</button>
+                                    <h6 class="my-1 portfolio-title">INTERIOR HOME DESIGN</h6>
+                                    <p class="content2">
+                                        I developed a static website for Interior Home Design using HTML, CSS, JavaScript, and Bootstrap. The website showcases a variety of modern home decor ideas, design inspirations, and renovation services...
+                                    </p>
+                                    <button class="btn1 popupbtn3"  onclick="openPopup('popup3')">VIEW PROJECT</button>
                                 </div>
                             </div>
                         </div>
@@ -311,7 +328,7 @@
 
 
                     </p>
-                    <div class="mt-3">
+                    <div class="mt-2">
                         <a class="btn1 popup-btn" href="https://avems-vigneswarans-projects.vercel.app/" target="_blank">VIEW
                             ONLINE</a>
 
@@ -348,7 +365,7 @@
                             and logs due to its flexibility and scalability.</li>
                     </ul>
                     </p>
-                    <div class="mt-3">
+                    <div class="mt-2">
                         <a class="btn1" href="https://ecommerce-organic-food.vercel.app/" target="_blank">VIEW
                             ONLINE</a>
 
@@ -375,7 +392,7 @@
                 </div>
                 <div class="text-popup px-5">
 
-                    <p class="popup-text mb-2"> <strong>Description:</strong> I developed a static website for Interior Home Design using HTML, CSS, JavaScript, and Bootstrap. The website showcases a variety of modern home decor ideas, design inspirations, and renovation services. It features a responsive layout, ensuring seamless compatibility across devices, including desktops, tablets, and mobiles. The site includes interactive image galleries, service descriptions, and a contact section. CSS animations and transitions enhance the visual appeal, while JavaScript enables smooth navigation and interactive elements. The Bootstrap framework provides a sleek and professional design with pre-styled components, making the website visually attractive and easy to use. This project demonstrates my front-end development skills and ability to create aesthetic, user-friendly static websites with clean, responsive design</p>
+                    <p class="popup-text mb-2"> <strong>Description:</strong> I developed a static website for Interior Home Design using HTML, CSS, JavaScript, and Bootstrap. The website showcases a variety of modern home decor ideas, design inspirations, and renovation services. It features a responsive layout, ensuring seamless compatibility across devices, including desktops, tablets, and mobiles. The site includes interactive image galleries, service descriptions, and a contact section. CSS animations and transitions enhance the visual appeal, while JavaScript enables smooth navigation and interactive elements. The Bootstrap framework provides a sleek and professional design with pre-styled components, making the website visually attractive and easy to use. This project demonstrates my front-end development skills and ability to create aesthetic, user-friendly static websites with clean, responsive design.</p>
                     <!-- <p class="popup-text"><strong>Technologies used:</strong>
                     <ul>
                         <li> <strong>Frontend:</strong> Angular + Bootstrap → Ideal for building a responsive and
@@ -386,7 +403,7 @@
                             and logs due to its flexibility and scalability.</li>
                     </ul>
                     </p> -->
-                    <div class="mt-3">
+                    <div class="mt-2">
                         <a class="btn1" href="https://interior-design-delta-five.vercel.app/" target="_blank">VIEW
                             ONLINE</a>
 
