--- a/portfolio.html
+++ b/portfolio.html
@@ -169,6 +169,7 @@
         .popup-btn{
             font-size: 8px !important;
             padding: 5px !important;
+            margin-bottom: 10px !important;
         }
 
         ul li {
