--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
 
                 <div class="menu-content">
                     <a href="/index.html">Home</a>
-                    <a href="/contact.html">About</a>
+                    <a href="/about.html">About</a>
                     <a href="/portfolio.html">Portfolio</a>
                     <a href="/contact.html">Contact</a>
                 </div>
