--- a/portfolio.html
+++ b/portfolio.html
@@ -199,7 +199,7 @@
 
                 <div class="menu-content">
                     <a href="/index.html">Home</a>
-                    <a href="/contact.html">About</a>
+                    <a href="/about.html">About</a>
                     <a href="/portfolio .html">Portfolio</a>
                     <a href="/contact.html">Contact</a>
                 </div>
