--- a/portfolio.html
+++ b/portfolio.html
@@ -206,12 +206,12 @@
 
             </div>
 
-            <nav class="px-5 py-3 d-flex align-items-center justify-content-between">
-                <div class="box">
+            <nav class="p-2 d-flex align-items-center justify-content-between">
+                <div class="box mx-2 mt-5">
                     <span class="text-uppercase">portfolio</span><br>
                     <h6 class="latest">LATEST WORKS</h6>
                 </div>
-                <div class="box">
+                <div class="box mx-5 mt-2">
                     <i onclick="toggleMenu()" class="fa-solid fa-list-ul"></i>
                 </div>
             </nav>
