--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       </div>
 
 
-      <nav class="px-5 py-3 d-flex align-items-center justify-content-between">
-        <div class="box">
+      <nav class="p-2 d-flex align-items-center justify-content-between">
+        <div class="box mt-2 mx-2">
           <span class="nav-title"> <img src="/assets/5.jpg" class="profile" alt=""> VIGNESWARAN</span>
         </div>
-        <div class="box">
+        <div class="box  mx-5 mt-2" >
           <i onclick="toggleMenu()" class="fa-solid fa-list-ul"></i>
         </div>
       </nav>
