--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,73 @@
             border-radius: 10px !important;
         }
 
+
+        
+
+
+
+  /* Full-screen Menu Overlay */
+  .menu-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #2E2E2E;         /* Darker grey base color */
+    background: rgba(46, 46, 46, 0.8);  /* Grey with slight transparency */
+    backdrop-filter: blur(25px);        /* Stronger blur effect */
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5); /* Shadow for depth */
+    z-index: 998;
+    display: none;
+    opacity: 0;
+    transition: opacity 0.5s;
+    border-radius: 10px !important;
+  }
+  
+  /* Show Menu */
+  .menu-overlay.active {
+    display: block;
+    opacity: 1;
+  }
+  
+  /* Close Button */
+  .close-btn {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    font-size: 34px;
+    color: #D9D9D9 !important;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  
+  .close-btn:hover {
+    color:#D9D9D9;
+    /* text-decoration: underline; */
+  }
+  
+  /* Menu Content */
+  .menu-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  
+  .menu-content a {
+    display: block;
+    font-size: 40px;
+    color:#D9D9D9;
+    text-decoration: none;
+    margin: 20px 0;
+    transition: 0.3s;
+  }
+  
+  .menu-content a:hover {
+    color:#D9D9D9;
+    text-decoration: underline;  }
+
         .text-uppercase {
             color: #D9D9D9 !important;
             font-weight: 600 !important;
