--- a/about.html
+++ b/about.html
@@ -62,8 +62,7 @@
                             To further strengthen my technical skills, I pursued Full Stack Development training at IT
                             Vedant Training Institute.
                             After completing my course, I joined CLUBMAN & HOSPITALITY SOFTWARE SOLUTIONS PVT. LTD. as a
-                            Full Stack Developer, where I gained 1.7 years of hands-on experience in building and
-                            maintaining web applications.
+                            Full Stack Developer, where I gained 1 year 7 months of hands-on experience in building and maintaining web applications.
                             I have expertise in a range of technologies, including HTML, CSS, Bootstrap, Tailwind CSS,
                             MS SQL, MongoDB, Node.js, Express.js, DevExtreme, and Angular, which I have effectively used
                             to develop robust and scalable applications.
