--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
                             <P class="mb-3"><i class="fa-brands fa-whatsapp"></i> <a href="https://api.whatsapp.com/send?phone=9629108882">9629108882 </a>
                             </P>
                             <h6 class="cont-title">FOLLOW ME</h6>
-                            <P class=""> <a href="https://github.com/vigneswaran162"><i class="fa-brands fa-github"></i></a> <a href=""><i class="fa-brands fa-linkedin"></i></a></P>
+                            <P class=""> <a href="https://github.com/vigneswaran162" target="_blank"><i class="fa-brands fa-github"></i></a> <a href="https://www.linkedin.com/in/vigneswaran-k-03b456248/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></P>
                         </div>
                     </div>
                 </div>
