Updated about.html and replaced resume PDF

--- a/about.html
+++ b/about.html
@@ -56,16 +56,15 @@
                     <div class="col-md-8 p-xs-3 p-md-5">
                         <h3 class="mb-3 mb-xs-1">ABOUT ME</h3>
                         <p class="mb-3 mb-xs-1 about-para ">
-                            I'm Vigneswaran from Salem.
-                            I hold a Bachelor of Engineering degree in Computer Science from Mahendra Institute of
-                            Technology, Namakkal.
-                            To further strengthen my technical skills, I pursued Full Stack Development training at IT
-                            Vedant Training Institute.
-                            After completing my course, I joined CLUBMAN & HOSPITALITY SOFTWARE SOLUTIONS PVT. LTD. as a
-                            Full Stack Developer, where I gained 1 year 7 months of hands-on experience in building and maintaining web applications.
-                            I have expertise in a range of technologies, including HTML, CSS, Bootstrap, Tailwind CSS,
-                            MS SQL, MongoDB, Node.js, Express.js, DevExtreme, and Angular, which I have effectively used
-                            to develop robust and scalable applications.
+                          I'm Vigneswaran from Salem.
+I hold a Bachelor of Engineering in Computer Science from Mahendra Institute of Technology, Namakkal.
+To further strengthen my technical skills, I completed a Full Stack Development course at IT Vedant Training Institute.
+
+After completing my training, I worked at CLUBMAN & HOSPITALITY SOFTWARE SOLUTIONS PVT. LTD. as a Full Stack Developer, where I gained 1 year and 7 months of hands-on experience in building and maintaining web applications.
+
+I have expertise in a wide range of technologies including HTML, CSS, Bootstrap, Tailwind CSS, MS SQL, MongoDB, Node.js, Express.js, DevExtreme, and Angular, which I have successfully applied to develop robust and scalable applications.
+
+Currently, I am working as a freelance developer, taking on college projects and custom freelance assignments, where I continue to apply and expand my skills in real-world development scenarios.
                             <!-- I'm Vigneswaran from Salem.
                             I have completed Bachelor of Engineering in the stream of Computer Science at Mahendra
                             Institute of Technology, Namakkal.
@@ -73,8 +72,8 @@
                             skills in Full Stack Development.
                             After completing my course, I joined the company CLUBMAN & HOSPITALITY SOFTWARE SOLUTIONS PVT. LTD. as a Full Stack Developer, where I gained 1.7 years of experience. -->
                         </p>
-                        <a class="btn1 about-btn" href="/assets/VigneswaranK(Resume).pdf" target="_blank">VIEW RESUME</a>
-                        <a class="btn1 about-btn" href="/assets/VigneswaranK(Resume).pdf" download="">DOWNLOAD RESUME</a>
+                        <a class="btn1 about-btn" href="/assets/VigneswaranKResume.pdf" target="_blank">VIEW RESUME</a>
+                        <a class="btn1 about-btn" href="/assets/VigneswaranKResume.pdf" download="">DOWNLOAD RESUME</a>
 
                     </div>
                 </div>
