--- a/portfolio.html
+++ b/portfolio.html
@@ -381,6 +381,22 @@
                         </div>
 
 
+                         <div class="swiper-slide  p-5">
+                            <div class="con-box">
+                                <div class="img-contain">
+                                    <img src="/assets/Screenshot 2025-06-21 232124.png" class="img-fluid p-2" alt="">
+                                </div>
+                                <div class="contain-box d-flex align-items-center justify-content-center flex-column">
+                                    <h6 class="my-1 text-uppercase portfolio-title">🚌 Bus Booking Web Application</h6>
+                                    <p class="content2">
+                                       
+                        A simple and efficient web application for booking bus seats online. Users can search for available buses by date and route, select seats, and confirm their bookings...
+                                    </p>
+                                    <button class="btn1 popupbtn3" onclick="openPopup('popup4')">VIEW PROJECT</button>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="swiper-slide  p-5">
                             <div class="con-box">
                                 <div class="img-contain">
@@ -552,6 +568,45 @@
             </div>
         </div>
     </div>
+
+
+  <div id="popup4" class="popup">
+        <div class="popup-content">
+            <div class="contain-popup">
+
+                <div class="title-top d-flex align-items-center justify-content-between p-2">
+                    <h5>🚌 Bus Booking Web Application</h5>
+                    <span class="btn12" onclick="closePopup('popup4')">✖</span>
+                </div>
+
+                <div class="img-popup">
+                    <img src="/assets/Screenshot 2025-06-21 232124.png" class="img-fluid popuimg" height="150px" alt="">
+                </div>
+                <div class="text-popup px-5">
+
+                    <p class="popup-text mb-2"> <strong>Description:</strong> A simple and efficient web application for booking bus seats online. Users can search for available buses by date and route, select seats, and confirm their bookings. The application supports secure online payments through Razorpay, allowing users to pay directly after choosing their seats. An integrated admin panel enables easy management of bus schedules and booking records. The system ensures a smooth and seamless booking experience from seat selection to payment confirmation.</p>
+                    <p class="popup-text"><strong>Technologies used:</strong>
+                    <ul>
+                        <li> <strong>Frontend:</strong> Angular + Bootstrap → Ideal for building a responsive and
+                            dynamic user interface.</li>
+                        <li><strong> Backend:</strong> Express.js + Node.js → Manages server-side operations, API
+                            requests, and handles business logic.</li>
+                        <li> <strong>Database:</strong> MongoDB → Suitable for storing event details, user information,
+                            and logs due to its flexibility and scalability.</li>
+                    </ul>
+                    </p>
+                    <div class="mt-2">
+                        <a class="btn1" href="https://busbooking-webapp.vercel.app/" target="_blank">VIEW
+                            ONLINE</a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
