--- a/portfolio.html
+++ b/portfolio.html
@@ -591,7 +591,7 @@
                             dynamic user interface.</li>
                         <li><strong> Backend:</strong> Express.js + Node.js → Manages server-side operations, API
                             requests, and handles business logic.</li>
-                        <li> <strong>Database:</strong> MongoDB → Suitable for storing event details, user information,
+                        <li> <strong>Database:</strong> MongoDB → Suitable for storing booking details, schedule information,
                             and logs due to its flexibility and scalability.</li>
                     </ul>
                     </p>
